--- a/src/app/register/new/new.component.html
+++ b/src/app/register/new/new.component.html
@@ -12,7 +12,7 @@
       </mat-form-field>
 
       <mat-form-field appearance="">
-        <label i18n="Label | data de nascimento">Data de Nascimento</label>
+        <label i18n="Label | data de nascimento">Data de Nascimento <small>(dd/mm/aaaa)</small></label>
         <input matInput type="search" #dt_nasc="ngModel" [(ngModel)]="student.dt_nasc" 
         name="dt_nasc" mask="00/00/0000" autocomplete="off" 
         (focus)="$event.target.select()">
