--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -38,9 +38,13 @@
     border-color: rgba(59, 58, 58, 0.94);
     background-color: rgba(245, 245, 245, 0.555);
   }
-
+  .mat-tab-label-active{
+    font-weight: 600;
+    font-size: 18px;
+  }
   .mat-tab-label{
-    color: white;
+    color: white !important;
+    opacity: 1 !important;
   }
   .mat-form-field-appearance-legacy .mat-form-field-label {
     color: rgb(250 250 250) !important;
@@ -50,9 +54,7 @@
     color: white !important;
 }
 
-  .mat-tab-label-active{
-    color: yellow
-  }
+
 }
 
 .form-select-sm {
